[package]
name = "kenzis-proto"
version = "0.1.0"
authors = ["Lyuben Todorov <lyuben.todorov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
webpki = "0.21.4"
flatbuffers = "0.8.3"